# backend

./: .coverage  .env  .env.example  .gitignore  .pylintrc  README.md  alembic.ini  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md  rfc.md
.github/workflows/: dev.yml  main.yml
app/: config.py  crud.py  database.py  main.py  models.py  schemas.py  security.py
kubernetes/: README.md  argocd.yaml  deployment.yaml  ingress.yaml  issuer.yaml  job-pre-sync.yaml  kustomization.yaml  service.yaml
project/: .coverage  .pylintrc  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
project/app/: main.py
project/app/api/routes/: admin_routes.py  atendimento_routes.py  audit_routes.py  group_routes.py  permission_routes.py  redirect_routes.py  role_routes.py  supervisor_routes.py  token_routes.py  unidade_saude_routes.py  user_routes.py
project/app/core/: config.py  hierarchy.py  security.py
project/app/crud/: audit_log.py  group.py  permission.py  role.py  token.py  user.py
project/app/database/: baseMixin.py  database.py  models.py  populate_db.py  schemas.py  seed.py
project/app/utils/: detectar_lesao.py  machine_learning.py  minio.py  qualidade_imagem.py  send_email.py  valida_cpf.py  verifica_qualidade.py
project/app/utils/data/: lesoes.json
project/migrations/: env.py
project/migrations/versions/: 2043cb9c9eae_description_of_changes.py  7156bf392473_hello_migration.py  807e9a1448d2_version_1_0.py  b7a658250923_version_1_0.py  cbd8cccc361a_initial_migration.py  d6ef94fd3de4_initial_tables.py  e7c3de348df4_hello_migration.py
project/tests/: test_config.py  test_security.py  test_valida_cpf.py
