[tool.poetry]
name = "your-project-name"
version = "0.1.0"
description = ""
authors = ["Your Name <yourname@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
alembic = "1.14.1"
asyncpg = "0.30.0"
fastapi = "0.115.7"
SQLAlchemy = "2.0.37"
uvicorn = "0.34.0"
bcrypt = "4.2.1"
python-jose = "3.3.0"
pydantic = { version = "2.10", extras = ["email"] }
passlib = "1.7.4"
python-multipart = "0.0.20"
minio = "7.2.15"
transformers = "4.36.0"
Pillow = "9.5.0"
numpy = "<2.0"
torch = { url = "https://download.pytorch.org/whl/cpu/torch-2.1.0%2Bcpu-cp311-cp311-linux_x86_64.whl" }
torchvision = { url = "https://download.pytorch.org/whl/cpu/torchvision-0.16.0%2Bcpu-cp311-cp311-linux_x86_64.whl" }

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
